infra/influxdb/service.yaml
# apiVersion: v1
# kind: Endpoints
# metadata:
#   name: influxdb-extern
# subsets:
#   - addresses:
#       - ip: 192.168.2.122  # <--- HIER DIE IP DER MASCHINE EINTRAGEN
#     ports:
#       - port: 8086        # Standardport für InfluxDB v2

apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: influxdb-extern
  labels:
    kubernetes.io/service-name: influxdb-extern
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8086
endpoints:
  - addresses:
      - "192.168.2.122"
    conditions:
      ready: true
   
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb-extern
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8086
