infra/influxdb/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb-route
spec:
  entryPoints:
    - websecure      # Wir nutzen Port 443 (HTTPS)
  routes:
  - match: Host(`influx-adp.yannikmueller.eu`) # <--- DEINE DOMAIN
    kind: Rule
    services:
    - name: influxdb-extern
      port: 8086
  tls:
    secretName: "influx-adp.yannikmueller.eu"
